# retrieve-orcid

./: .gitignore  README.md  model.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  try_orcid_api.py
src/retrieve_orcid/: get_record.py  get_works.py  model.py
src/test/: test_works.py
