[metadata]
name = retrieve-orcid
version = 0.0.1
url= https://github.com/passive-radio/retrieve-orcid
author = passive-radio
author_email = srccreator@gmail.com
license = MIT
license_file = LICENSE
description = A minimum retriever scripts for public ORCID data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, orcid, academic
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/passive-radio/retrieve-orcid
    Source = https://github.com/passive-radio/retrieve-orcid

[options]
packages = find_namespace:
package_dir = 
    = src
python_requires = >=3.10
include_package_data = True

[options.package_data]
* = *.py, *.md

[options.packages.find]
where=src